# ahreumcode

./: .gitignore  Cargo.toml  LICENSE  README.en.md  README.md
docs/specs/: configuration-policy.ko.md  intent-frame-uncertainty-gate.ko.md  logging-policy.ko.md  model-response-contract.ko.md  permission-mode-policy.ko.md
docs/specs/implementation/: local-llm-runtime-technical-spec.ko.md  technical-spec-index.ko.md  tool-runtime-technical-spec.ko.md  tui-technical-spec.ko.md
docs/specs/implementation/llm/: llm-01-config-runtime.ko.md  llm-02-provider-connection.ko.md  llm-03-plain-prompt-request.ko.md  llm-04-message-history.ko.md  llm-05-schema-prompt-builder.ko.md  (+6 more)
src/: app.rs  cli.rs  main.rs  product.rs
src/config/: mod.rs  schema.rs
src/llm/: decision.rs  diagnostics.rs  history.rs  lm_studio.rs  mod.rs  provider.rs  repair.rs  response_parser.rs  schema_prompt.rs
src/logging/: event.rs  mod.rs  writer.rs
src/tool/: change.rs  command_policy.rs  command_runtime.rs  diagnostics.rs  explore.rs  mod.rs  observation.rs  path.rs  permission.rs  registry.rs  runtime.rs  web.rs
src/tui/: app.rs  approval.rs  command.rs  event_log.rs  expanded_form.rs  mod.rs  persona.rs  persona_prompt.rs  persona_runtime.rs  runtime_request.rs  runtime_workspace.rs  state.rs  style.rs  working_process.rs  workspace.rs
src/tui/components/: approval_surface.rs  command_surface.rs  expanded_form.rs  mod.rs  persona.rs  statusline.rs  wordmark.rs  working_process.rs  workspace.rs
src/tui/scenes/: approval.rs  epilogue.rs  intro.rs  main.rs  mod.rs  prompt.rs
(+35 files in other folders)
