[package]
name = "ahreumcode"
version = "1.0.0"
edition = "2021"
license = "MIT"

[dependencies]
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
toml = "0.8"
unicode-width = "0.2"
ureq = { version = "2", default-features = false }
